<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="default_web_client_id">384861564418-u5k9t3h4iemvlnajcpl652jo75g1b6u2.apps.googleusercontent.com</string>
    <string name="app_name">Firebase</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo!</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="usuario">introduce tu usuario</string>
    <string name="contrasena">introduce tu contraseña</string>
    <string name="o_inicia_sesion_con">O inicia sesion con</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="resgistrate_ahora">Resgistrate ahora</string>
    <string name="iniciar_sesion_con_google">Iniciar sesion con google</string>
    <string name="boton_para_salir_de_la_aplicacion">Boton para salir de la aplicacion</string>
    <string name="campo_para_ingresar_la_contrase_a">Campo para ingresar la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="crea_aqui_tu_nueva_cuenta">Crea aqui tu cuenta!</string>
    <string name="icono_ajustes">Icono ajustes</string>
    <string name="icono_buscar">Icono buscar</string>
    <string name="icono_pantalla_principal">Icono pantalla principal</string>
    <string name="icono_favoritos">Icono favoritos</string>
    <string name="remy">Remy</string>
    <string name="logo_app">logo app</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="publicaciones">publicaciones</string>
    <string name="guardar">Guardar</string>
    <string name="a_ade_una_publicacion">Añade una publicacion</string>
    <string name="ingredientes">ingredientes</string>
    <string name="descripcion">descripcion</string>
    <string name="titulo">titulo</string>
    <string name="descripcionTitulo">Descripcion:</string>
    <string name="ingredientesTItulo">Ingredientes:</string>
    <string name="min">min</string>
    <string name="dificultad">dificultad</string>
    <string name="preparacion">Preparacion:</string>
    <string name="tus_recetas_favoritas_te_esperan">Tus recetas favoritas te esperan</string>
    <string name="fotopublicacion">foto publicacion</string>
    <string name="anadir_publicacion">Anadir publicacion</string>
    <string name="ingredientesEj">Ej: huevo, leche, azúcar</string>
    <string name="introduce_tu_email">introduce tu email</string>
    <string name="salir_de_la_cuenta">salir de la cuenta</string>
    <string name="pregunta_salir">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="seguir_cuenta">seguir cuenta</string>
    <string name="seguir">Seguir</string>
    <string name="publicacionesTitulo">publicaciones</string>
    <string name="seguidos">seguidos</string>
    <string name="seguidoresTitulo">seguidores</string>
    <string name="dejar_de_seguir">Dejar de seguir</string>
    <string name="descubre_mas_cuentas">Descubre mas cuentas</string>
    <string name="introduce_tu_nueva_contrase_a">Cambiar contraseña</string>
    <string name="introduce_tu_nuevo_usuario">Introduce tu nuevo usuario:</string>
    <string name="usuario_nuevo">usuario nuevo</string>
    <string name="enviar_email">Enviar Email</string>
    <string name="cambiar_usuario">Cambiar usuario</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="seleccionar_foto">Seleccionar foto</string>
    <string name="no_tienes_recetas_favoritas">No tienes recetas favoritas</string>
    <string name="no_hay_publicaciones">No hay publicaciones</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="email_enviado">Email enviado para cambiar la contraseña</string>
    <string name="error_seleccionar_imagen">Error al abrir el selector</string>
    <string name="foto_actualizada">Foto de perfil actualizada</string>
    <string name="foto_error">Error al subir la imagen</string>
    <string name="imagen_no_seleccionada">No se ha seleccionado ninguna imagen</string>
    <string name="nombre_cambiado">Usuario cambiado</string>
    <string name="rellenar_campos">Rellena todos los campos</string>
    <string name="error_guardar_publicacion">Error al guardar la publicación</string>
    <string name="t_tulo_de_la_publicaci_n">Título de la publicación</string>

</resources>