<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">

    <ImageButton
        android:id="@+id/ibPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/icono_pantalla_principal"
        android:minHeight="48dp"
        android:src="@drawable/iconocasa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibBuscar"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/icono_buscar"
        android:minHeight="48dp"
        android:src="@drawable/iconobusqueda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibFavoritos"
        app:layout_constraintStart_toEndOf="@id/ibPrincipal"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibFavoritos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/icono_favoritos"
        android:minHeight="48dp"
        android:src="@drawable/iconofavoritos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibAjustes"
        app:layout_constraintStart_toEndOf="@id/ibBuscar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibAjustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/icono_ajustes"
        android:minHeight="48dp"
        android:src="@drawable/iconousuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibFavoritos"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>