<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AnadirPublicacionActivity">


    <ImageView
        android:id="@+id/ivImagenSeleccionada"
        android:layout_width="176dp"
        android:layout_height="147dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/btGuardarPublicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSubirImagen" />

    <ProgressBar
        android:id="@+id/pbCargandoPubli"
        android:layout_width="36dp"
        android:layout_height="51dp"
        android:visibility="gone"
        android:layout_marginStart="181dp"
        android:layout_marginEnd="182dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivImagenSeleccionada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivImagenSeleccionada" />

    <ImageButton
        android:id="@+id/ibFlechaParaSalir"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/boton_para_salir_de_la_aplicacion"
        android:src="@drawable/flechaparaatras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloAnadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/a_ade_una_publicacion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTituloAnadir"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/titulo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloAnadir" />

    <EditText
        android:id="@+id/etPreparacion"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:text="@string/min"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/btGuardarPublicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIngredientes"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/etDescripcionAnadir"
        android:layout_width="273dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:hint="@string/descripcion"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTituloAnadir" />

    <EditText
        android:id="@+id/etIngredientes"
        android:layout_width="273dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:hint="@string/ingredientesEj"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcionAnadir" />

    <Button
        android:id="@+id/btGuardarPublicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSubirImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="127dp"
        android:text="Subir imagen"
        app:layout_constraintBottom_toTopOf="@+id/btGuardarPublicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPreparacion"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>