<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FavoritosActivity">

    <TextView
        android:id="@+id/tvVacioFav"
        android:layout_width="320dp"
        android:layout_height="69dp"
        android:text="@string/no_tienes_recetas_favoritas"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewFav"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewFav"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewFav"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewFav"/>

    <TextView
        android:id="@+id/tvFavoritosTitulo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/tus_recetas_favoritas_te_esperan"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFav"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:contentDescription="@string/publicaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <include
        android:id="@+id/barra_navegacion"
        layout="@layout/layout_barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>